--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.15.9",
     "less": "^4.1.3",
     "less-loader": "^7.3.0",
+    "vant": "^2.12.49",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
